--- a/popup.html
+++ b/popup.html
@@ -2,44 +2,41 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- build:css styles/popup-vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css styles/main.css -->
+
     <link href="styles/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css">
-    <!-- endbuild -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+
   </head>
   <body>
 
-<div class="ui container">
-  <div class="ui tow column grid">
-    <div class="column">
-    <h1 id='streameur'></h1>
-    </div>
-    <div class="column right floated">
-      <p>Test</p>
-    </div>
-  </div>
+    <div class="top" id="content">
+            <img src="" alt="">
+          </div>
 
-</div>
-  <div class="ui divider"></div>
-  <div class="ui container">
-    <div class="ui one colum grid">
-      <div class="column">
-      <p id='live-game'></p>
-      <p id='live-title'></p>
-      </div>
-    </div>
-    <!-- build:js scripts/popup-vendor.js -->
-    <!-- bower:js -->
-    <!-- endbower -->
-    <!-- endbuild -->
+          <div class="bottom">
+            <a target="_blank" href="" class="btn-site">aller sur mon site <i class="fa fa-chevron-right"></i></a>
+            <ul class="nav-social ali">
+              <li><a target="_blank" class="twitch" href=""><i style="vertical-align: middle;" class="fa fa-twitch"></i></a></li>
+              <li><a target="_blank" class="youtube" href=""><i style="vertical-align: middle;" class="fa fa-youtube"></i></a></li>
+              <li><a target="_blank" class="twitter" href=""><i style="vertical-align: middle;" class="fa fa-twitter"></i></a></li>
+              <li><a target="_blank" class="facebook" href=""><i style="vertical-align: middle;" class="fa fa-facebook"></i></a></li>
+            </ul>
+          </div>
+
+
+
+
+
+
+        <script type="text/javascript" src="scripts/jquery.js"></script>
+
+
+
+
+
     <script src="scripts/jquery.js"></script>
-    <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
-    <!-- endbuild -->
+
+
   </body>
 </html>
